// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eta parsing 1 predictions 1 direction 1`] = `
<p>
  [
    {
        "line": "39",
        "stopName": "Old Finch Ave At Morningside Ave",
        "routeName": "Finch East",
        "etas": [
            {
                "id": 0,
                "seconds": "96",
                "vehicle": "3109",
                "branch": "39",
                "tripTag": "45227730",
                "epochTime": "1672201380997"
            },
            {
                "id": 1,
                "seconds": "1247",
                "vehicle": "3264",
                "branch": "39",
                "tripTag": "45227729",
                "epochTime": "1672202531994"
            },
            {
                "id": 2,
                "seconds": "2447",
                "vehicle": "9234",
                "branch": "39",
                "tripTag": "45227728",
                "epochTime": "1672203731994"
            }
        ],
        "stopTag": 12925
    }
]
</p>
`;

exports[`eta parsing 1 predictions 2 directions 1`] = `
<p>
  [
    {
        "line": "39",
        "stopName": "Finch Station",
        "routeName": "",
        "etas": [
            {
                "id": 0,
                "seconds": "611",
                "vehicle": "3124",
                "branch": "39A",
                "tripTag": "45227587",
                "epochTime": "1672202160000"
            },
            {
                "id": 1,
                "seconds": "1811",
                "vehicle": "3281",
                "branch": "39A",
                "tripTag": "45227586",
                "epochTime": "1672203360000"
            },
            {
                "id": 2,
                "seconds": "3011",
                "vehicle": "3234",
                "branch": "39A",
                "tripTag": "45227585",
                "epochTime": "1672204560000"
            }
        ],
        "stopTag": 14211
    },
    {
        "line": "39",
        "stopName": "Finch Station",
        "routeName": "",
        "etas": [
            {
                "id": 0,
                "seconds": "11",
                "vehicle": "9227",
                "branch": "39B",
                "tripTag": "45227579",
                "epochTime": "1672201560000"
            },
            {
                "id": 1,
                "seconds": "1211",
                "vehicle": "3283",
                "branch": "39B",
                "tripTag": "45227578",
                "epochTime": "1672202760000"
            },
            {
                "id": 2,
                "seconds": "2411",
                "vehicle": "3109",
                "branch": "39B",
                "tripTag": "45227577",
                "epochTime": "1672203960000"
            }
        ],
        "stopTag": 14211
    }
]
</p>
`;

exports[`eta parsing 2 predictions 2 direction 1`] = `
<p>
  [
    {
        "line": "39",
        "stopName": "Finch Ave East At Wilfred Ave",
        "routeName": "Finch East towards Neilson",
        "etas": [
            {
                "id": 0,
                "seconds": "338",
                "vehicle": "3124",
                "branch": "39A",
                "tripTag": "45227587",
                "epochTime": "1672202317976"
            },
            {
                "id": 1,
                "seconds": "1538",
                "vehicle": "3281",
                "branch": "39A",
                "tripTag": "45227586",
                "epochTime": "1672203517976"
            },
            {
                "id": 2,
                "seconds": "2738",
                "vehicle": "3234",
                "branch": "39A",
                "tripTag": "45227585",
                "epochTime": "1672204718036"
            }
        ],
        "stopTag": 8607
    },
    {
        "line": "39",
        "stopName": "Finch Ave East At Wilfred Ave",
        "routeName": "Finch East towards Old Finch and Morningview",
        "etas": [
            {
                "id": 0,
                "seconds": "447",
                "vehicle": "9227",
                "branch": "39B",
                "tripTag": "45227579",
                "epochTime": "1672202426996"
            },
            {
                "id": 1,
                "seconds": "1289",
                "vehicle": "3283",
                "branch": "39B",
                "tripTag": "45227578",
                "epochTime": "1672203268756"
            },
            {
                "id": 2,
                "seconds": "2489",
                "vehicle": "3109",
                "branch": "39B",
                "tripTag": "45227577",
                "epochTime": "1672204468756"
            }
        ],
        "stopTag": 8607
    }
]
</p>
`;

exports[`eta parsing edge case 1 1`] = `
<p>
  [
    {
        "line": "133",
        "stopName": "Nightstar Rd At Morningside Ave North Side",
        "routeName": "Neilson",
        "etas": [
            {
                "id": 0,
                "seconds": "131",
                "vehicle": "3651",
                "branch": "133",
                "tripTag": "45383927",
                "epochTime": "1673245825951"
            },
            {
                "id": 1,
                "seconds": "1406",
                "vehicle": "1235",
                "branch": "133",
                "tripTag": "45383893",
                "epochTime": "1673247101236"
            },
            {
                "id": 2,
                "seconds": "3206",
                "vehicle": "3492",
                "branch": "133",
                "tripTag": "45383892",
                "epochTime": "1673248901236"
            }
        ],
        "stopTag": 581
    }
]
</p>
`;

exports[`eta parsing edge case 2 1`] = `
<p>
  [
    {
        "line": "133",
        "stopName": "Scarborough Centre Station",
        "routeName": "Neilson",
        "etas": [],
        "stopTag": 14286
    },
    {
        "line": "133",
        "stopName": "Scarborough Centre Station",
        "routeName": "Neilson",
        "etas": [
            {
                "id": 0,
                "seconds": "589",
                "vehicle": "3492",
                "branch": "133",
                "tripTag": "45383892",
                "epochTime": "1673247600000"
            }
        ],
        "stopTag": 14286
    }
]
</p>
`;

exports[`eta parsing empty result 1`] = `
<p>
  []
</p>
`;

exports[`eta parsing no ETA 1`] = `
<p>
  [
    {
        "line": "",
        "stopName": "480 Gordon Baker Rd",
        "routeName": "",
        "etas": [],
        "stopTag": 7900
    }
]
</p>
`;
